--- a/WishCart App/pom.xml
+++ b/WishCart App/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.13</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>22.13.0-beta.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
