--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8008
+server.port=6246
 
-spring.datasource.url=jdbc:mysql://localhost:3306/wishcart
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=mysql://root:9BFAjIW1kJ26jecBvdmF@containers-us-west-179.railway.app:6246/railway
+spring.datasource.driver-class-name=containers-us-west-179.railway.app
 spring.datasource.username=root
-spring.datasource.password=2504
+spring.datasource.password=9BFAjIW1kJ26jecBvdmF
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
