--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=6246
+server.port=${{MySQL.MYSQLPORT}}
 
-spring.datasource.url=mysql://root:9BFAjIW1kJ26jecBvdmF@containers-us-west-179.railway.app:6246/railway
-spring.datasource.driver-class-name=containers-us-west-179.railway.app
-spring.datasource.username=root
-spring.datasource.password=9BFAjIW1kJ26jecBvdmF
+spring.datasource.url=${{MySQL.MYSQL_URL}}
+spring.datasource.driver-class-name=${{MySQL.MYSQLHOST}}
+spring.datasource.username=${{MySQL.MYSQLPASSWORD}}
+spring.datasource.password=${{MySQL.MYSQLPASSWORD}}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
