--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=${{MySQL.MYSQLPORT}}
-
-spring.datasource.url=${{MySQL.MYSQL_URL}}
+spring.datasource.url=${{MySQL.MYSQL_URL}}/${{MySQL.MYSQLPORT}}/${{MySQL.MYSQLDATABASE}}
 spring.datasource.driver-class-name=${{MySQL.MYSQLHOST}}
-spring.datasource.username=${{MySQL.MYSQLPASSWORD}}
+spring.datasource.username=${{MySQL.MYSQLUSER}}
 spring.datasource.password=${{MySQL.MYSQLPASSWORD}}
 
 spring.jpa.hibernate.ddl-auto=update
