--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=${{MySQL.MYSQL_URL}}/${{MySQL.MYSQLPORT}}/${{MySQL.MYSQLDATABASE}}
-spring.datasource.driver-class-name=${{MySQL.MYSQLHOST}}
-spring.datasource.username=${{MySQL.MYSQLUSER}}
-spring.datasource.password=${{MySQL.MYSQLPASSWORD}}
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.driver-class-name=${MYSQLHOST}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
