--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.driver-class-name=${MYSQLHOST}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=jdbc:mysql://containers-us-west-179.railway.app:6246/railway
+spring.datasource.username=root
+spring.datasource.password=9BFAjIW1kJ26jecBvdmF
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
