--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-179.railway.app:6246/railway
-spring.datasource.username=root
-spring.datasource.password=9BFAjIW1kJ26jecBvdmF
+#spring.datasource.url=jdbc:mysql://containers-us-west-179.railway.app:6246/railway
+#spring.datasource.username=root
+#spring.datasource.password=9BFAjIW1kJ26jecBvdmF
+#
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
