--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/tripmakers
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=2504
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
