--- a/WishCart App/src/main/resources/application.properties
+++ b/WishCart App/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8008
+
 spring.datasource.url=jdbc:mysql://localhost:3306/tripmakers
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
